# origin-message-deserialisers

./: .gitignore  LICENSE  README.md
examples/MATLAB/: aGramFileDemonstrator.m  bGramFileDemonstrator.m  pd0FileDemonstrator.m
examples/cpp/: README  build_all.sh
examples/cpp/aGramFileDemonstrator/: README
examples/cpp/aGramFileDemonstrator/src/: CMakeLists.txt  agramfiledemonstrator.cpp
examples/cpp/aGramStreamDemonstrator/: README
examples/cpp/aGramStreamDemonstrator/src/: CMakeLists.txt  agramstreamdemonstrator.cpp
examples/cpp/bGramFileDemonstrator/: README
examples/cpp/bGramFileDemonstrator/src/: CMakeLists.txt  bgramfiledemonstrator.cpp
examples/cpp/bGramStreamDemonstrator/: CMakeLists.txt  README
examples/cpp/bGramStreamDemonstrator/src/: CMakeLists.txt  bgramstreamdemonstrator.cpp
examples/cpp/pd0FileDemonstrator/: README
examples/cpp/pd0FileDemonstrator/src/: CMakeLists.txt  UserPD0Block.cpp  UserPD0Block.h  pd0filedemonstrator.cpp
examples/cpp/pd0StreamDemonstrator/: README
examples/cpp/pd0StreamDemonstrator/src/: CMakeLists.txt  pd0streamdemonstrator.cpp
examples/octave/: README  aGramFileDemonstrator.m  bGramFileDemonstrator.m  pd0FileDemonstrator.m
examples/python3/: README  aGramFileDemonstrator.py  aGramStreamDemonstrator.py  bGramFileDemonstrator.py  bGramStreamDemonstrator.py  pd0FileDemonstrator.py  pd0StreamDemonstrator.py
src/DSPGram/: adcp_coredata_messages.cpp  adcp_coredata_messages.h  adcp_coredata_messages.py
src/DSPGram/octave/: CInstrumentTime.m  SDSP_v1_0_ADCPGram.m  SDSP_v1_0_BDGram.m  SPingCommon.m
src/MATLAB/: README  rotation.m
src/MATLAB/DSPGram/: CInstrumentTime.m  SDSP_v1_0_ADCPGram.m  SDSP_v1_0_BDGram.m  SPingCommon.m
src/MATLAB/PDN_messages/PD0Message/: PD0Message.m
src/MATLAB/PDN_messages/PD0Message/PIESVariableLeader/: PIESVariableLeader.m
src/MATLAB/PDN_messages/PD0Message/RDIFixedLeader/: RDIFixedLeader.m
src/MATLAB/PDN_messages/PD0Message/RDIIntensity/: RDIIntensity.m
src/MATLAB/PDN_messages/PD0Message/RDIPD0Header/: RDIPD0Header.m
src/MATLAB/PDN_messages/PD0Message/RDIPrctGood/: RDIPrctGood.m
src/MATLAB/PDN_messages/PD0Message/RDIVariableLeader/: RDIVariableLeader.m
src/MATLAB/PDN_messages/PD0Message/RDIVelocity/: RDIVelocity.m
src/MATLAB/PDN_messages/PD0Message/RDIVerticalBeamIntensity/: RDIVerticalBeamIntensity.m
src/MATLAB/PDN_messages/PD0Message/RDIVerticalBeamLeader/: RDIVerticalBeamLeader.m
src/MATLAB/PDN_messages/PD0Message/RDIVerticalBeamPrctGood/: RDIVerticalBeamPrctGood.m
src/MATLAB/PDN_messages/PD0Message/RDIVerticalBeamVelocity/: RDIVerticalBeamVelocity.m
src/MATLAB/PDN_messages/PD0Message/RDIVerticalBeamXC/: RDIVerticalBeamXC.m
src/MATLAB/PDN_messages/PD0Message/RDIXC/: RDIXC.m
src/MATLAB/PDN_messages/PD0Message/SONOriginSystemLeader/: SONOriginSystemLeader.m
src/MATLAB/adcp_util/: adcputil.m
src/MATLAB/maths/: rotation.m
src/PDNMessages/: PDN_messages.cpp  PDN_messages.h  PDN_messages.py  RDIPD0Interface.h  RDIPD0Interface.py  UserPD0Section.py
src/PDNMessages/@PDN_messages/@PD0Message/: PD0Message.m
src/PDNMessages/@PDN_messages/@PD0Message/@PIESVariableLeader/: PIESVariableLeader.m
src/PDNMessages/@PDN_messages/@PD0Message/@RDIFixedLeader/: RDIFixedLeader.m
src/maths/@rotation/: rotation.m
src/util/@adcputil/: adcputil.m
(+7 files in other folders)
